feat: receive browser connector imports
